# RhythmFlow

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  rhythmflow.spec  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
rhythmflow/: __init__.py  __main__.py  app.py  config.py  logging_setup.py
rhythmflow/core/: alignment.py  audio_io.py  ffmpeg_tools.py  pipeline.py  segmented_alignment.py
rhythmflow/ui/: i18n.py  main_window.py  review_dialog.py  widgets.py  workers.py
rhythmflow/webui/: __init__.py  api.py  app_webview.py  events.py  lxns.py  media_server.py  settings.py  state.py  tasks.py  updater.py  waveform.py
rhythmflow/webui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
rhythmflow/webui/frontend/src/: App.tsx  bridge.ts  i18n.ts  main.tsx  store.tsx  styles.css  subtitles.ts  subtitles.zh.txt  theme.ts  themeMode.tsx  types.ts
rhythmflow/webui/frontend/src/components/: AboutModal.tsx  AlignmentTable.tsx  Header.tsx  InputsCard.tsx  MainPage.tsx  OptionsCard.tsx  ProgressLog.tsx  ReferenceAudioPickerModal.tsx
rhythmflow/webui/frontend/src/components/osu/: OsuAssistantPage.tsx  OsuExportPanel.tsx  OsuPlayer.tsx  (+1 more)
rhythmflow/webui/frontend/src/osu/: audio.ts  export.ts  judge.ts  parse.ts  render.ts  types.ts
tests/: test_alignment.py  test_logging_setup.py  test_lxns.py  test_pipeline.py  test_review_dialog.py  test_webui_api.py  test_webui_settings.py  test_webui_state.py  test_webui_updater.py
(+3 files in other folders)
