[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmflow"
version = "0.2.1"
description = "Align hand-cam rhythm-game videos to clean reference audio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "HaoduStudio" }
]
dependencies = [
  "pywebview>=5.0",
  "sentry-sdk>=2.35.0",
  "numpy>=2.0",
  "scipy>=1.14",
  "imageio-ffmpeg>=0.5",
  "librosa>=0.10",
  "pydub>=0.25"
]

[project.optional-dependencies]
separation = [
  "demucs>=4.0"
]

[project.scripts]
rhythmflow = "rhythmflow.app:main"

[tool.setuptools.packages.find]
include = ["rhythmflow*"]
